[package]
name = "sspagbol"
version = "0.1.0"
edition = "2024"

[dependencies]
ansi_term = "0.12"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
url = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
crossbeam = "0.8"
crossbeam-channel = "0.5"
native-tls = "0.2"
x509-parser = "0.15"
chrono = "0.4"

[package.metadata.deb]
maintainer = "Afi Hogan <afihogan@gmail.com>"
depends = "libc6 (>= 2.27)"  # Update depending on your platform
section = "utility"
assets = [
  ["target/release/sspagbol", "usr/bin/", "755"],
  { source = "config/services.yaml", dest = "etc/sspagbol/services.yaml", mode = "644", conf = true }
]